load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_status.go",
        "api_visualization.go",
        "api_visualization_type.go",
        "protobuf_any.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/api/go_http_client/visualization_model",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_errors//:go_default_library",
        "@com_github_go_openapi_strfmt//:go_default_library",
        "@com_github_go_openapi_swag//:go_default_library",
        "@com_github_go_openapi_validate//:go_default_library",
    ],
)
