[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'kfp-server-api'
version = '2.14.6'
description = 'Kubeflow Pipelines API'
authors = [
    {name = 'google', email = 'kubeflow-pipelines@google.com'},
]
readme = 'README.md'
requires-python = '>=3.9.0'
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
license = 'Apache-2.0'
license-files = ['LICENSE']
keywords = [
    'OpenAPI',
    'OpenAPI-Generator',
    'Kubeflow Pipelines API',
]
dependencies = [
    'certifi >= 14.05.14',
    'future; python_version<=2.7',
    'six >= 1.10',
    'python_dateutil >= 2.5.3',
    'setuptools >= 21.0.0',
    'urllib3 >= 1.15.1',
]


[dependency-groups]
dev = [
    'pytest~=4.6.7', # needed for python 2.7+3.4
    'pytest-cov>=2.8.1',
    'pytest-randomly==1.2.3', # needed for python 2.7+3.4
]

[project.urls]
Github = 'https://github.com/kubeflow/pipelines'


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ['*test*']
