# Copyright 2023 The Kubeflow Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'kfp-server-api'
version = '2.14.6'
description = 'Kubeflow Pipelines API'
authors = [
    {name = 'google', email = 'kubeflow-pipelines@google.com'}
]
keywords = [
    'OpenAPI',
    'OpenAPI-Generator',
    'Kubeflow Pipelines API',
]
readme = 'README.md'
requires-python = '>=3.9.0'
license = 'Apache-2.0'
dependencies = [
    'urllib3 >= 1.15',
    'six >= 1.10',
    'certifi',
    'python-dateutil',
]

[dependency-groups]
dev = [
    'pytest~=4.6.7', # needed for python 2.7+3.4
    'pytest-cov>=2.8.1',
    'pytest-randomly==1.2.3', # needed for python 2.7+3.4
]

[project.urls]
Github = 'https://github.com/kubeflow/pipelines'
Documentation = 'https://kfp-kubernetes.readthedocs.io/'
'Bug Tracker'= 'https://github.com/kubeflow/pipelines/issues'
Source = 'https://github.com/kubeflow/pipelines/tree/master/kubernetes_platform/python'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ['test.*', 'tests.*']
