load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "persistence_agent.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/agent/persistence",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/src/agent/persistence/client:go_default_library",
        "//backend/src/agent/persistence/worker:go_default_library",
        "//backend/src/common/util:go_default_library",
        "//backend/src/crd/pkg/apis/scheduledworkflow:go_default_library",
        "//backend/src/crd/pkg/client/clientset/versioned:go_default_library",
        "//backend/src/crd/pkg/client/clientset/versioned/scheme:go_default_library",
        "//backend/src/crd/pkg/client/informers/externalversions:go_default_library",
        "//backend/src/crd/pkg/signals:go_default_library",
        "@com_github_argoproj_argo//pkg/apis/workflow:go_default_library",
        "@com_github_argoproj_argo//pkg/client/clientset/versioned:go_default_library",
        "@com_github_argoproj_argo//pkg/client/informers/externalversions:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

go_binary(
    name = "persistence",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
