load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "minio.go",
        "scheduled_workflow.go",
        "sql.go",
        "workflow.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver/client",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/src/crd/pkg/client/clientset/versioned:go_default_library",
        "//backend/src/crd/pkg/client/clientset/versioned/typed/scheduledworkflow/v1alpha1:go_default_library",
        "@com_github_argoproj_argo//pkg/client/clientset/versioned:go_default_library",
        "@com_github_argoproj_argo//pkg/client/clientset/versioned/typed/workflow/v1alpha1:go_default_library",
        "@com_github_cenkalti_backoff//:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_minio_minio_go//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
    ],
)
