load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "const.go",
        "filter_context.go",
        "pagination_context.go",
        "paths.go",
    ],
    importpath = "github.com/kubeflow/pipelines/backend/src/apiserver/common",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/api:go_default_library",
        "//backend/src/common/util:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
